# PI2_Dados

./: Exemplos.ipynb  LICENSE  README.md  pyproject.toml  requirements.txt
.ipynb_checkpoints/: Exemplos-checkpoint.ipynb  README-checkpoint.md
listas/: insumos.txt  siglas_estados.txt  tratamentos.csv
src/listas/: especialidades.txt  tipoequipamento.txt
src/pi2_dados/: __init__.py  __main__.py  pi2_cria_dados.py  pi2_cria_tabelas.py  pi2_remove_tabelas.py
